@@ -8,6 +8,7 @@ import org.entur.lamassu.cache.VehicleTypeCache;
 import org.entur.lamassu.model.entities.Station;
 import org.entur.lamassu.model.entities.Vehicle;
 import org.entur.lamassu.model.entities.VehicleType;
+import org.entur.lamassu.model.entities.VehicleTypeAvailability;
 import org.entur.lamassu.model.provider.FeedProvider;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -59,19 +60,16 @@ public class SpatialIndexService {
       var vehicleTypeIds = station
         .getVehicleTypesAvailable()
         .stream()
-        .map(vta -> vta.getVehicleTypeId())
+        .map(VehicleTypeAvailability::getVehicleTypeId)
         .collect(Collectors.toSet());
 
       List<VehicleType> vehicleTypes = vehicleTypeCache.getAll(vehicleTypeIds);
 
       id.setAvailableFormFactors(
-        vehicleTypes.stream().map(VehicleType::getFormFactor).collect(Collectors.toList())
+        vehicleTypes.stream().map(VehicleType::getFormFactor).toList()
       );
       id.setAvailablePropulsionTypes(
-        vehicleTypes
-          .stream()
-          .map(VehicleType::getPropulsionType)
-          .collect(Collectors.toList())
+        vehicleTypes.stream().map(VehicleType::getPropulsionType).toList()
       );
     } else {
       id.setAvailableFormFactors(List.of());
